--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.1",
+    "next-router-mock": "^0.9.10",
     "prettier": "^3.0.3"
   }
 }
