--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@huggingface/inference": "^2.6.4",
     "next": "13.5.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
