--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@huggingface/inference": "^2.6.4",
+    "@mui/material": "^5.14.18",
     "next": "13.5.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
