--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@huggingface/inference": "^2.6.4",
     "@mui/material": "^5.14.18",
     "next": "13.5.4",
+    "next-auth": "^4.24.5",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
