--- a/package.json
+++ b/package.json
@@ -28,11 +28,18 @@
     "@emotion/styled": "^11.11.0",
     "@huggingface/inference": "^2.6.4",
     "@mui/material": "^5.14.18",
+    "ajv-formats": "^2.1.1",
+    "db-errors": "^0.2.3",
+    "knex": "^3.0.1",
     "next": "13.5.4",
     "next-auth": "^4.24.5",
+    "next-connect": "^1.0.0",
+    "objection": "^3.1.3",
+    "pg": "^8.11.3",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sqlite3": "^5.1.6"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
